--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.liquibase.change-log=classpath:migration.xml
 spring.datasource.generate-unique-name=true
 spring.datasource.url=jdbc:h2:mem:test
