--- a/pom.xml
+++ b/pom.xml
@@ -107,17 +107,17 @@
             <id>jooq-codegen</id>
             <build>
                 <plugins>
-                    <plugin>
-                        <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-maven-plugin</artifactId>
-                    </plugin>
+                    <!--                    <plugin>-->
+                    <!--                        <groupId>org.springframework.boot</groupId>-->
+                    <!--                        <artifactId>spring-boot-maven-plugin</artifactId>-->
+                    <!--                    </plugin>-->
                     <plugin>
                         <groupId>org.jooq</groupId>
                         <artifactId>jooq-codegen-maven</artifactId>
                         <version>${jooq.version}</version>
                         <executions>
                             <execution>
-                                <id>generate-h2-jpa</id>
+                                <id>generate-h2</id>
                                 <phase>generate-sources</phase>
                                 <goals>
                                     <goal>generate</goal>
@@ -125,7 +125,7 @@
                                 <configuration>
                                     <jdbc>
                                         <driver>org.h2.Driver</driver>
-                                        <url>jdbc:h2:mem:test/public</url>
+                                        <url>jdbc:h2:mem:test</url>
                                         <user></user>
                                         <password></password>
                                     </jdbc>
@@ -134,7 +134,7 @@
                                             <name>org.jooq.meta.h2.H2Database</name>
                                             <includes>.*</includes>
                                             <excludes></excludes>
-                                            <inputSchema>public</inputSchema>
+                                            <inputSchema>PUBLIC</inputSchema>
                                             <properties>
                                                 <property>
                                                     <key>packages</key>
@@ -146,27 +146,27 @@
                                             <includes>.*</includes>
                                         </database>
                                         <generate>
+                                            <pojos>true</pojos>
                                         </generate>
                                         <target>
                                             <packageName>pl.kuba565.resttask.jooq</packageName>
-                                            <directory>src/main/java</directory>
+                                            <directory>target/generated-sources/jooq-h2</directory>
                                         </target>
                                     </generator>
                                 </configuration>
                             </execution>
                         </executions>
+
+                        <dependencies>
+                            <dependency>
+                                <groupId>com.h2database</groupId>
+                                <artifactId>h2</artifactId>
+                                <version>${h2.version}</version>
+                            </dependency>
+                        </dependencies>
                     </plugin>
                 </plugins>
             </build>
         </profile>
     </profiles>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 </project>
