--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <model.mapper.version>2.3.2</model.mapper.version>
         <spring.boot.version>2.1.8.RELEASE</spring.boot.version>
         <swagger.version>2.9.2</swagger.version>
+        <liquibase-maven-plugin.version>3.8.0</liquibase-maven-plugin.version>
     </properties>
 
     <dependencies>
@@ -75,6 +76,11 @@
             <artifactId>liquibase-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-maven-plugin</artifactId>
+            <version>${liquibase-maven-plugin.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
             <version>${model.mapper.version}</version>
@@ -100,74 +106,92 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jooq</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+
     </dependencies>
 
-    <profiles>
-        <profile>
-            <id>jooq-codegen</id>
-            <build>
-                <plugins>
-                    <!--                    <plugin>-->
-                    <!--                        <groupId>org.springframework.boot</groupId>-->
-                    <!--                        <artifactId>spring-boot-maven-plugin</artifactId>-->
-                    <!--                    </plugin>-->
-                    <plugin>
-                        <!--                   TODO:     https://github.com/vy/liquibase-jooq-demo/blob/master/pom.xml-->
-                        <groupId>org.jooq</groupId>
-                        <artifactId>jooq-codegen-maven</artifactId>
-                        <version>${jooq.version}</version>
-                        <executions>
-                            <execution>
-                                <id>generate-h2</id>
-                                <phase>generate-sources</phase>
-                                <goals>
-                                    <goal>generate</goal>
-                                </goals>
-                                <configuration>
-                                    <jdbc>
-                                        <driver>org.h2.Driver</driver>
-                                        <url>jdbc:h2:mem:test</url>
-                                        <user></user>
-                                        <password></password>
-                                    </jdbc>
-                                    <generator>
-                                        <database>
-                                            <name>org.jooq.meta.h2.H2Database</name>
-                                            <includes>.*</includes>
-                                            <excludes></excludes>
-                                            <inputSchema>PUBLIC</inputSchema>
-                                            <properties>
-                                                <property>
-                                                    <key>packages</key>
-                                                    <value>
-                                                        pl.kuba565.resttask.model
-                                                    </value>
-                                                </property>
-                                            </properties>
-                                            <includes>.*</includes>
-                                        </database>
-                                        <generate>
-                                            <pojos>true</pojos>
-                                        </generate>
-                                        <target>
-                                            <packageName>pl.kuba565.resttask.jooq</packageName>
-                                            <directory>target/generated-sources/jooq-h2</directory>
-                                        </target>
-                                    </generator>
-                                </configuration>
-                            </execution>
-                        </executions>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
-                        <dependencies>
-                            <dependency>
-                                <groupId>com.h2database</groupId>
-                                <artifactId>h2</artifactId>
-                                <version>${h2.version}</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+    <!--    <profiles>-->
+    <!--        <profile>-->
+    <!--            <id>jooq-codegen</id>-->
+    <!--            <build>-->
+    <!--                <plugins>-->
+    <!--                    <plugin>-->
+    <!--                        <groupId>org.springframework.boot</groupId>-->
+    <!--                        <artifactId>spring-boot-maven-plugin</artifactId>-->
+    <!--                    </plugin>-->
+    <!--                    <plugin>-->
+    <!--                        <groupId>org.liquibase</groupId>-->
+    <!--                        <artifactId>liquibase-maven-plugin</artifactId>-->
+    <!--                        <version>${liquibase-maven-plugin.version}</version>-->
+    <!--                        <executions>-->
+    <!--                            <execution>-->
+    <!--                                <phase>generate-resources</phase>-->
+    <!--                                <goals>-->
+    <!--                                    <goal>update</goal>-->
+    <!--                                </goals>-->
+    <!--                            </execution>-->
+    <!--                        </executions>-->
+    <!--                        <configuration>-->
+    <!--                            <changeLogFile>src/main/resources/migration.xml</changeLogFile>-->
+    <!--                            <driver>org.h2.Driver</driver>-->
+    <!--                            <url>jdbc:h2:mem:test</url>-->
+    <!--                            <username></username>-->
+    <!--                            <password></password>-->
+    <!--                            <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>-->
+    <!--                        </configuration>-->
+    <!--                    </plugin>-->
+    <!--                    <plugin>-->
+    <!--                        <groupId>org.jooq</groupId>-->
+    <!--                        <artifactId>jooq-codegen-maven</artifactId>-->
+    <!--                        <version>${jooq.version}</version>-->
+    <!--                        <executions>-->
+    <!--                            <execution>-->
+    <!--                                <id>generate-h2</id>-->
+    <!--                                <phase>generate-sources</phase>-->
+    <!--                                <goals>-->
+    <!--                                    <goal>generate</goal>-->
+    <!--                                </goals>-->
+    <!--                                <configuration>-->
+    <!--                                    <jdbc>-->
+    <!--                                        <driver>org.h2.Driver</driver>-->
+    <!--                                        <url>jdbc:h2:mem:test</url>-->
+    <!--                                        <user></user>-->
+    <!--                                        <password></password>-->
+    <!--                                    </jdbc>-->
+    <!--                                    <generator>-->
+    <!--                                        <database>-->
+    <!--                                            <name>org.jooq.meta.h2.H2Database</name>-->
+    <!--                                            <includes>.*</includes>-->
+    <!--                                            <excludes></excludes>-->
+    <!--                                            <inputSchema>PUBLIC</inputSchema>-->
+    <!--                                        </database>-->
+    <!--                                        <generate>-->
+    <!--                                            <pojos>true</pojos>-->
+    <!--                                        </generate>-->
+    <!--                                        <target>-->
+    <!--                                            <packageName>pl.kuba565.resttask.jooq</packageName>-->
+    <!--                                            <directory>target/generated-sources/jooq-h2</directory>-->
+    <!--                                        </target>-->
+    <!--                                    </generator>-->
+    <!--                                </configuration>-->
+    <!--                            </execution>-->
+    <!--                        </executions>-->
+    <!--                    </plugin>-->
+    <!--                </plugins>-->
+    <!--            </build>-->
+    <!--        </profile>-->
+    <!--    </profiles>-->
 </project>
