--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.liquibase.change-log=classpath:migration.xml
 spring.datasource.generate-unique-name=true
-spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.url=jdbc:h2:~/test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=
 spring.datasource.password=
